# Proteosim_EA

./: LICENSE  README.md  ms_experiment_final.ipynb  pyproject.toml  requirements.txt  test.ipynb
.github/workflows/: tests.yml
Proteosim_EA/: __init__.py  file_handling.py  liquid_chromatography.py  mass_spectra_simulation.py  protein_digestion.py
Proteosim_EA.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
data/: dummy_proteins.fasta
tests/: test_file_handling.py  test_liquid_chromatography.py  test_mass_spectra_simulation.py  test_protein_digestion.py
